main-src/src/stylesheets/main-page.scss
.all .mobile-background{
  display: flex;
  width:100vw;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  float: left;
  position: relative;
}

.mobile-background #body-main{
  width: 100%;
  height: 80vh;
}

.all .web-background{
  width:100%;
  height: 93vh;
  position: relative;
}

@media screen and (max-width: 600px){
  .web-background {
    transform: scale(2.5);
    z-index: 10;
  }
}

